# tech-interview-analizer

./: .gitignore  README.md  asr.py  cli.py  config.py  config.yaml  env_example.txt  main.py  pyproject.toml
analizers/: mistake_analyzer.py  qa_evaluator.py
