[project]
name = "interviews-analizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Qu1ck_1337",email = "Glebkraykin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=0.1.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-generativeai (>=0.3.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "whisperx (>=3.4.2,<4.0.0)",
    "torch (>=2.0.0)",
    "torchaudio (>=2.0.0)",
    "transformers (>=4.30.0)",
    "pyannote.audio (>=3.0.0)",
    "ffmpeg-python (>=0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
